fix(VDivider): visiblity in container with dynamic height

--- a/packages/vuetify/src/components/VDivider/VDivider.sass
+++ b/packages/vuetify/src/components/VDivider/VDivider.sass
@@ -16,7 +16,7 @@
       align-self: stretch
       border-width: $divider-vertical-border-width
       display: inline-flex
-      height: 100%
+      height: auto
       margin-left: $divider-vertical-margin-left
       max-height: 100%
       max-width: 0px
